# ai-powered-app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: CLAUDE.md  Dockerfile  pyproject.toml
backend/src/: main.py  settings.py
backend/src/app/routers/: compliance.py  dashboard.py  insights.py  orb.py  pipeline.py  properties.py  valuations.py
backend/src/app/services/: ai_client.py  bedrock_chat.py  bedrock_embed.py  duckdb_client.py  embed.py  llm.py  model.py  mysql_client.py  sql_validator.py
backend/src/app/services/agents/: events.py  graph.py  planner.py  runs.py  runtime.py  schemas.py  summariser.py
backend/src/app/services/agents/nodes/: __init__.py  compliance.py  data_query.py  general.py  lead_triage.py  listing.py  market_watch.py  matcher.py  valuation.py
backend/src/app/services/rag/: regulations.py  reviews.py
backend/src/app/services/tools/: web_search.py
backend/tests/agents/: test_graph.py  test_nodes.py  test_planner_routing.py  test_sql_validator.py
backend/tests/services/: test_bedrock_chat.py  test_llm_dispatcher.py
data/: feature_importance.json  metrics.json  residuals.json  reviews_embeddings.parquet
evals/: README.md  judge.py  run.py
frontend/: CLAUDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
infra/: .terraform.lock.hcl  README.md  alb.tf  alb_logs.tf  ecr.tf  ecs_services.tf  github_oidc.tf  iam.tf  network.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  seed_task.tf  variables.tf  versions.tf
misc/: Sydney Suburbs Reviews.csv  (+3 more)
(+81 files in other folders)
