[project]
name = "ai-powered-app-backend"
version = "0.1.0"
description = "FastAPI backend for the Reapit One-Platform demo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "duckdb>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "pyarrow>=16.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "tavily-python>=0.5",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
